--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@nestjs/platform-express": "^7.4.4",
     "@nestjs/platform-socket.io": "^7.4.4",
     "@nestjs/platform-ws": "^7.4.4",
-    "@nestjs/schedule": "^0.4.0",
+    "@nestjs/schedule": "^0.4.1",
     "@nestjs/swagger": "^4.6.1",
     "@nestjs/terminus": "^7.0.1",
     "@nestjs/typeorm": "^7.1.4",
@@ -50,8 +50,8 @@
     "apollo-opentracing": "^1.5.0",
     "apollo-server-cache-redis": "^1.2.2",
     "apollo-server-caching": "^0.5.2",
-    "apollo-server-express": "^2.18.0",
-    "apollo-server-plugin-response-cache": "^0.5.4",
+    "apollo-server-express": "^2.18.1",
+    "apollo-server-plugin-response-cache": "^0.5.5",
     "axios": "^0.20.0",
     "body-parser": "^1.19.0",
     "bull": "^3.18.0",
@@ -91,11 +91,11 @@
     "luxon": "^1.25.0",
     "mime-types": "^2.1.27",
     "minio": "^7.0.16",
-    "mongoose": "^5.10.6",
+    "mongoose": "^5.10.7",
     "mongoose-autopopulate": "^0.12.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "node-buffs": "^0.8.7",
+    "node-buffs": "^0.8.9",
     "node-fetch": "^2.6.1",
     "nodemailer": "^6.4.11",
     "opentracing": "^0.14.4",
@@ -116,7 +116,7 @@
     "rxjs": "^6.6.3",
     "sharp": "^0.26.1",
     "shortid": "^2.2.15",
-    "snyk": "^1.399.1",
+    "snyk": "^1.400.0",
     "socket.io": "^2.3.0",
     "socket.io-redis": "^5.4.0",
     "swagger-ui-express": "^4.1.4",
@@ -159,7 +159,7 @@
     "@types/passport-jwt": "^3.0.3",
     "@types/pump": "^1.1.0",
     "@types/qs": "^6.9.5",
-    "@types/ramda": "^0.27.18",
+    "@types/ramda": "^0.27.19",
     "@types/redis": "^2.8.27",
     "@types/redlock": "^4.0.1",
     "@types/request-ip": "^0.0.35",
@@ -182,7 +182,7 @@
     "prettier": "^2.1.2",
     "pretty-quick": "^3.0.2",
     "sqlite3": "^5.0.0",
-    "supertest": "^4.0.2",
+    "supertest": "^5.0.0-1",
     "ts-jest": "^26.4.0",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
