--- a/.appenv.base.yml
+++ b/.appenv.base.yml
@@ -8,12 +8,10 @@ LOGGER_LEVEL: info
 SECRET_KEY:
 # default: 5000
 PORT: 5000
-# default: 20mb ; post json 的 body 大小
-PAYLOAD_LIMIT: 200mb
 
-app: # TODO
+app:
   # default: admin@example.com
-  sys_admin_email: admin@example.com
+  sys_admin_email:
   # 为空时生成随机密码
   sys_admin_password:
   # default: 500
@@ -24,12 +22,14 @@ app: # TODO
   assets_internal_endpoint:
   # default: http://127.0.0.1:5000
   master_address: http://127.0.0.1:5000
+  # default: 20mb ; post json 的 body 大小
+  payload_limit: 200mb
 
-features: # TODO
+features:
   # 是否开启审计模式
-  audit: false
+  audit_enable: false
   # ; endpoint is /swagger
-  swagger: false
+  swagger_enable: false
   cron_enable: true
 
 tracing:
@@ -37,11 +37,9 @@ tracing:
   service_name: my-service
   endpoint: http://localhost:14268/api/traces
 
-uploader: # TODO
+uploader:
   enable: true
-  # default: 3
   max_count: 10
-  # default: /uploads
   resource_path: /uploads
 
 graphql:
