--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "cron-parser": "^2.16.3",
     "dataloader": "^2.0.0",
     "date-fns": "^2.16.1",
-    "dayjs": "^1.9.0",
+    "dayjs": "^1.9.1",
     "email-templates": "^7.1.1",
     "express": "^4.17.1",
     "express-rate-limit": "^5.1.3",
@@ -97,10 +97,10 @@
     "multer": "^1.4.2",
     "node-buffs": "^0.8.9",
     "node-fetch": "^2.6.1",
-    "nodemailer": "^6.4.11",
+    "nodemailer": "^6.4.13",
     "opentracing": "^0.14.4",
     "otplib": "^12.0.1",
-    "ow": "^0.17.0",
+    "ow": "^0.18.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "pump": "^3.0.0",
@@ -116,12 +116,12 @@
     "rxjs": "^6.6.3",
     "sharp": "^0.26.1",
     "shortid": "^2.2.15",
-    "snyk": "^1.401.0",
+    "snyk": "^1.406.0",
     "socket.io": "^2.3.0",
     "socket.io-redis": "^5.4.0",
     "swagger-ui-express": "^4.1.4",
     "tmp": "^0.2.1",
-    "typeorm": "^0.2.26",
+    "typeorm": "0.2.26",
     "validator": "^13.1.17",
     "winston": "^3.3.3",
     "xlsx": "^0.16.7",
@@ -129,10 +129,10 @@
   },
   "devDependencies": {
     "@nestjs/testing": "^7.4.4",
-    "@prisma/cli": "2.7.1",
+    "@prisma/cli": "2.8.0",
     "@types/amqplib": "^0.5.13",
     "@types/bluebird": "^3.5.32",
-    "@types/bull": "^3.14.2",
+    "@types/bull": "^3.14.3",
     "@types/chance": "^1.1.0",
     "@types/cli-color": "^2.0.0",
     "@types/common-tags": "^1.8.0",
@@ -159,7 +159,7 @@
     "@types/passport-jwt": "^3.0.3",
     "@types/pump": "^1.1.0",
     "@types/qs": "^6.9.5",
-    "@types/ramda": "^0.27.19",
+    "@types/ramda": "^0.27.20",
     "@types/redis": "^2.8.27",
     "@types/redlock": "^4.0.1",
     "@types/request-ip": "^0.0.35",
@@ -170,8 +170,8 @@
     "@types/supertest": "^2.0.10",
     "@types/uuid": "^8.3.0",
     "@types/xml2js": "^0.4.5",
-    "@typescript-eslint/eslint-plugin": "^4.2.0",
-    "@typescript-eslint/parser": "^4.2.0",
+    "@typescript-eslint/eslint-plugin": "^4.3.0",
+    "@typescript-eslint/parser": "^4.3.0",
     "eslint": "^7.10.0",
     "eslint-config-alloy": "^3.8.0",
     "eslint-plugin-import": "^2.22.1",
@@ -183,7 +183,7 @@
     "pretty-quick": "^3.0.2",
     "sqlite3": "^5.0.0",
     "supertest": "^5.0.0",
-    "ts-jest": "^26.4.0",
+    "ts-jest": "^26.4.1",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
   },
