--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "dataloader": "^2.0.0",
     "date-fns": "^2.16.1",
     "dayjs": "^1.9.6",
-    "email-templates": "^7.2.0",
+    "email-templates": "^8.0.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.2.3",
     "express-session": "^1.17.1",
@@ -172,6 +172,7 @@
     "@types/sharp": "^0.26.1",
     "@types/shortid": "^0.0.29",
     "@types/socket.io": "^2.1.11",
+    "@types/socket.io-redis": "^1.0.26",
     "@types/supertest": "^2.0.10",
     "@types/uuid": "^8.3.0",
     "@types/xml2js": "^0.4.7",
