--- a/package.json
+++ b/package.json
@@ -28,24 +28,24 @@
   },
   "dependencies": {
     "@alicloud/pop-core": "^1.7.10",
-    "@nestjs/bull": "^0.3.0",
-    "@nestjs/common": "^7.6.1",
-    "@nestjs/core": "^7.6.1",
+    "@nestjs/bull": "^0.3.1",
+    "@nestjs/common": "^7.6.2",
+    "@nestjs/core": "^7.6.2",
     "@nestjs/cqrs": "^7.0.1",
     "@nestjs/graphql": "^7.9.1",
     "@nestjs/jwt": "^7.2.0",
     "@nestjs/mongoose": "^7.2.0",
     "@nestjs/passport": "^7.1.5",
-    "@nestjs/platform-express": "^7.6.1",
-    "@nestjs/platform-socket.io": "^7.6.1",
-    "@nestjs/platform-ws": "^7.6.1",
+    "@nestjs/platform-express": "^7.6.2",
+    "@nestjs/platform-socket.io": "^7.6.2",
+    "@nestjs/platform-ws": "^7.6.2",
     "@nestjs/schedule": "^0.4.1",
-    "@nestjs/swagger": "^4.7.5",
+    "@nestjs/swagger": "^4.7.7",
     "@nestjs/terminus": "^7.0.1",
     "@nestjs/typeorm": "^7.1.5",
-    "@nestjs/websockets": "^7.6.1",
+    "@nestjs/websockets": "^7.6.2",
     "@prisma/client": "2.13.0",
-    "@sentry/node": "^5.29.0",
+    "@sentry/node": "^5.29.1",
     "accesscontrol": "^2.2.1",
     "alipay-sdk": "^3.1.5",
     "amqplib": "^0.6.0",
@@ -80,7 +80,7 @@
     "fs-extra": "^9.0.1",
     "graphql": "^15.4.0",
     "graphql-type-json": "^0.3.2",
-    "hashids": "^2.2.2",
+    "hashids": "^2.2.3",
     "hbs": "^4.1.1",
     "helmet": "^4.2.0",
     "highland": "^3.0.0-beta.10",
@@ -93,14 +93,14 @@
     "lru-cache": "^6.0.0",
     "luxon": "^1.25.0",
     "mime-types": "^2.1.27",
-    "minio": "^7.0.17",
-    "mongoose": "^5.11.7",
+    "minio": "^7.0.18",
+    "mongoose": "^5.11.8",
     "mongoose-autopopulate": "^0.12.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "node-buffs": "^0.8.9",
     "node-fetch": "^2.6.1",
-    "nodemailer": "^6.4.16",
+    "nodemailer": "^6.4.17",
     "opentracing": "^0.14.5",
     "otplib": "^12.0.1",
     "ow": "^0.20.0",
@@ -119,7 +119,7 @@
     "rxjs": "^6.6.3",
     "sharp": "^0.26.3",
     "shortid": "^2.2.16",
-    "snyk": "^1.436.0",
+    "snyk": "^1.437.2",
     "socket.io": "^3.0.4",
     "socket.io-redis": "^5.4.0",
     "swagger-ui-express": "^4.1.5",
@@ -132,18 +132,19 @@
   },
   "devDependencies": {
     "@compodoc/compodoc": "^1.1.11",
-    "@nestjs/testing": "^7.6.1",
+    "@nestjs/testing": "^7.6.2",
     "@prisma/cli": "2.13.0",
     "@types/amqplib": "^0.5.16",
     "@types/bluebird": "^3.5.33",
     "@types/bull": "^3.14.4",
-    "@types/chance": "^1.1.0",
+    "@types/chance": "^1.1.1",
     "@types/cli-color": "^2.0.0",
     "@types/common-tags": "^1.8.0",
     "@types/compression": "^1.7.0",
     "@types/connect-redis": "^0.0.16",
+    "@types/cookie-parser": "^1.4.2",
     "@types/cron": "^1.7.2",
-    "@types/email-templates": "^7.1.0",
+    "@types/email-templates": "^8.0.0",
     "@types/express": "4.17.9",
     "@types/express-rate-limit": "^5.1.0",
     "@types/express-session": "^1.17.3",
@@ -164,7 +165,7 @@
     "@types/passport-jwt": "^3.0.3",
     "@types/pump": "^1.1.0",
     "@types/qs": "^6.9.5",
-    "@types/ramda": "^0.27.32",
+    "@types/ramda": "^0.27.34",
     "@types/redis": "^2.8.28",
     "@types/redlock": "^4.0.1",
     "@types/request-ip": "^0.0.35",
@@ -176,12 +177,12 @@
     "@types/supertest": "^2.0.10",
     "@types/uuid": "^8.3.0",
     "@types/xml2js": "^0.4.7",
-    "@typescript-eslint/eslint-plugin": "^4.9.1",
-    "@typescript-eslint/parser": "^4.9.1",
+    "@typescript-eslint/eslint-plugin": "^4.10.0",
+    "@typescript-eslint/parser": "^4.10.0",
     "eslint": "^7.15.0",
     "eslint-config-alloy": "^3.8.2",
     "eslint-plugin-import": "^2.22.1",
-    "husky": "^4.3.5",
+    "husky": "^4.3.6",
     "jest": "^26.6.3",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.6",
@@ -191,7 +192,7 @@
     "supertest": "^6.0.1",
     "ts-jest": "^26.4.4",
     "ts-node": "^9.1.1",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.3"
   },
   "husky": {
     "hooks": {
