--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "apollo-server-express": "^2.19.0",
     "apollo-server-plugin-response-cache": "^0.5.6",
     "axios": "^0.21.0",
+    "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
     "bull": "^3.20.0",
     "cache-manager": "^3.4.0",
@@ -80,6 +81,7 @@
     "fs-extra": "^9.0.1",
     "graphql": "^15.4.0",
     "graphql-type-json": "^0.3.2",
+    "handlebars": "^4.7.6",
     "hashids": "^2.2.5",
     "hbs": "^4.1.1",
     "helmet": "^4.2.0",
@@ -153,7 +155,7 @@
     "@types/highland": "^2.12.10",
     "@types/jaeger-client": "^3.15.4",
     "@types/jest": "^26.0.19",
-    "@types/lodash": "^4.14.165",
+    "@types/lodash": "^4",
     "@types/lru-cache": "^5.1.0",
     "@types/luxon": "^1.25.0",
     "@types/mime-types": "^2.1.0",
@@ -188,6 +190,7 @@
     "nodemon": "^2.0.6",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
+    "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.0",
     "supertest": "^6.0.1",
     "ts-jest": "^26.4.4",
