--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "@nestjs/terminus": "^7.0.1",
     "@nestjs/typeorm": "^7.1.5",
     "@nestjs/websockets": "^7.6.3",
-    "@prisma/client": "2.13.1",
     "@sentry/node": "^5.29.2",
     "accesscontrol": "^2.2.1",
     "alipay-sdk": "^3.1.5",
@@ -85,6 +84,7 @@
     "hbs": "^4.1.1",
     "helmet": "^4.2.0",
     "highland": "^3.0.0-beta.10",
+    "iconv-lite": "^0.6.2",
     "ismobilejs": "^1.1.1",
     "jaeger-client": "^3.18.1",
     "json5": "^2.1.3",
@@ -139,9 +139,9 @@
   "devDependencies": {
     "@compodoc/compodoc": "^1.1.11",
     "@nestjs/testing": "^7.6.3",
-    "@prisma/cli": "2.13.1",
     "@types/amqplib": "^0.5.16",
     "@types/bluebird": "^3.5.33",
+    "@types/body-parser": "^1.19.0",
     "@types/bull": "^3.14.4",
     "@types/chance": "^1.1.1",
     "@types/cli-color": "^2.0.0",
@@ -186,7 +186,7 @@
     "@types/xml2js": "^0.4.7",
     "@typescript-eslint/eslint-plugin": "^4.10.0",
     "@typescript-eslint/parser": "^4.10.0",
-    "eslint": "^7.15.0",
+    "eslint": "^7.16.0",
     "eslint-config-alloy": "^3.8.2",
     "eslint-plugin-import": "^2.22.1",
     "husky": "^4.3.6",
