--- a/package.json
+++ b/package.json
@@ -46,11 +46,13 @@
     "alipay-sdk": "^3.1.5",
     "amqplib": "^0.6.0",
     "apollo-opentracing": "^2.0.0",
+    "apollo-server": "^2.19.1",
     "apollo-server-cache-redis": "^1.2.2",
     "apollo-server-caching": "^0.5.2",
-    "apollo-server-express": "^2.19.0",
-    "apollo-server-plugin-response-cache": "^0.5.6",
-    "apollo-server-types": "^0.6.1",
+    "apollo-server-env": "^2.4.5",
+    "apollo-server-express": "^2.19.1",
+    "apollo-server-plugin-response-cache": "^0.5.7",
+    "apollo-server-types": "^0.6.2",
     "axios": "^0.21.1",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
@@ -118,15 +120,16 @@
     "redis": "^3.0.2",
     "redis-dataloader": "^1.0.2",
     "redlock": "^4.2.0",
+    "reflect-metadata": "^0.1.13",
     "request-ip": "^2.1.3",
     "response-time": "^2.3.2",
     "rxjs": "^6.6.3",
-    "sharp": "^0.26.3",
+    "sharp": "^0.27.0",
     "shortid": "^2.2.16",
-    "snyk": "^1.437.2",
+    "snyk": "^1.437.3",
     "socket.io": "^3.0.4",
     "socket.io-redis": "^5.4.0",
-    "swagger-ui-express": "^4.1.5",
+    "swagger-ui-express": "^4.1.6",
     "tmp": "^0.2.1",
     "typeorm": "^0.2.29",
     "uuid": "^8.3.2",
@@ -200,7 +203,6 @@
     "nodemon": "^2.0.6",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
-    "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.0",
     "supertest": "^6.0.1",
     "ts-jest": "^26.4.4",
