--- a/package.json
+++ b/package.json
@@ -182,7 +182,7 @@
     "ts-morph": "^12.0.0",
     "ts-node": "^10.3.0",
     "tslib": "^2.3.1",
-    "typescript": "beta"
+    "typescript": "^4.4.4"
   },
   "nodemonConfig": {
     "verbose": true,
