--- a/package.json
+++ b/package.json
@@ -31,32 +31,32 @@
   },
   "dependencies": {
     "@alicloud/pop-core": "^1.7.10",
-    "@danielwii/asuna-helper": "^0.0.10",
+    "@danielwii/asuna-helper": "^0.0.11",
     "@danielwii/asuna-shared": "^0.0.4",
-    "@nestjs/common": "^8.1.2",
-    "@nestjs/core": "^8.1.2",
+    "@nestjs/common": "^8.2.0",
+    "@nestjs/core": "^8.2.0",
     "@nestjs/cqrs": "^8.0.0",
     "@nestjs/graphql": "^9.1.1",
     "@nestjs/mongoose": "^9.0.1",
     "@nestjs/passport": "^8.0.1",
-    "@nestjs/platform-express": "^8.1.2",
-    "@nestjs/platform-socket.io": "^8.1.2",
-    "@nestjs/platform-ws": "^8.1.2",
+    "@nestjs/platform-express": "^8.2.0",
+    "@nestjs/platform-socket.io": "^8.2.0",
+    "@nestjs/platform-ws": "^8.2.0",
     "@nestjs/schedule": "^1.0.1",
     "@nestjs/swagger": "^5.1.4",
     "@nestjs/terminus": "^8.0.1",
     "@nestjs/typeorm": "^8.0.2",
-    "@nestjs/websockets": "^8.1.2",
-    "@prisma/client": "3.3.0",
-    "@sentry/node": "^6.13.3",
+    "@nestjs/websockets": "^8.2.0",
+    "@prisma/client": "3.4.2",
+    "@sentry/node": "^6.14.1",
     "accesscontrol": "^2.2.1",
     "ali-oss": "^6.16.0",
     "alipay-sdk": "^3.1.7",
     "amqplib": "^0.8.0",
-    "apollo-opentracing": "^2.1.62",
-    "apollo-server-cache-redis": "^3.2.0",
-    "apollo-server-express": "^3.4.0",
-    "apollo-server-plugin-response-cache": "^3.3.0",
+    "apollo-opentracing": "^2.1.64",
+    "apollo-server-cache-redis": "^3.3.0",
+    "apollo-server-express": "^3.5.0",
+    "apollo-server-plugin-response-cache": "^3.4.0",
     "bluebird": "^3.7.2",
     "blurhash": "^1.1.4",
     "cache-manager": "^3.4.4",
@@ -71,14 +71,14 @@
     "cron-parser": "^4.1.0",
     "date-fns": "^2.25.0",
     "dayjs": "^1.10.7",
-    "elastic-apm-node": "^3.23.0",
+    "elastic-apm-node": "^3.24.0",
     "email-templates": "^8.0.8",
-    "express-rate-limit": "^5.5.0",
+    "express-rate-limit": "^5.5.1",
     "express-session": "^1.17.2",
     "fs-extra": "^10.0.0",
     "geoip-lite": "^1.4.2",
-    "graphql": "^16.0.0",
-    "graphql-scalars": "^1.12.0",
+    "graphql": "^16.0.1",
+    "graphql-scalars": "^1.13.1",
     "graphql-tools": "^8.2.0",
     "graphql-type-json": "^0.3.2",
     "handlebars": "^4.7.7",
@@ -88,12 +88,13 @@
     "jsondiffpatch": "^0.4.1",
     "lodash": "^4.17.21",
     "lru_map": "^0.4.1",
-    "luxon": "^2.0.2",
+    "luxon": "^2.1.1",
     "minio": "^7.0.19",
     "mongoose": "^6.0.12",
     "mongoose-autopopulate": "^0.16.0",
     "morgan": "^1.10.0",
     "node-buffs": "^0.8.17",
+    "node-fetch": "^3.1.0",
     "nodemailer": "^6.7.0",
     "opentracing": "^0.14.5",
     "otplib": "^12.0.1",
@@ -111,13 +112,13 @@
     "sharp": "^0.29.2",
     "shortid": "^2.2.16",
     "socket.io-redis": "^6.1.1",
-    "typeorm": "^0.2.38",
+    "typeorm": "^0.2.39",
     "xlsx": "^0.17.3",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.1.4",
-    "@nestjs/testing": "^8.1.2",
+    "@nestjs/testing": "^8.2.0",
     "@trivago/prettier-plugin-sort-imports": "git+https://github.com/danielwii/prettier-plugin-sort-imports.git#main",
     "@tsconfig/node14": "^1.0.1",
     "@types/ali-oss": "^6",
@@ -149,7 +150,6 @@
     "@types/morgan": "^1",
     "@types/multer": "^1",
     "@types/node": "^16",
-    "@types/node-fetch": "^3",
     "@types/nodemailer": "^6",
     "@types/passport": "^1",
     "@types/passport-jwt": "^3",
@@ -161,25 +161,25 @@
     "@types/ua-parser-js": "^0",
     "@types/uuid": "^8",
     "@types/xml2js": "^0",
-    "@typescript-eslint/eslint-plugin": "^5.2.0",
-    "@typescript-eslint/parser": "^5.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.3.1",
+    "@typescript-eslint/parser": "^5.3.1",
     "builder-pattern": "^1.3.0",
-    "eslint": "^8.1.0",
+    "eslint": "^8.2.0",
     "eslint-config-alloy": "^4.4.0",
     "eslint-import-resolver-node": "^0.3.6",
-    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-import": "^2.25.3",
     "glob": "^7.2.0",
     "husky": "^7.0.4",
     "jest": "^27.3.1",
     "minimatch": "^3.0.4",
-    "nodemon": "^2.0.14",
+    "nodemon": "^2.0.15",
     "prettier": "^2.4.1",
     "pretty-quick": "^3.1.1",
-    "prisma": "3.3.0",
+    "prisma": "3.4.2",
     "sqlite3": "^5.0.2",
     "supertest": "^6.1.6",
     "ts-jest": "^27.0.7",
-    "ts-morph": "^12.1.0",
+    "ts-morph": "^12.2.0",
     "ts-node": "^10.4.0",
     "tslib": "^2.3.1",
     "typescript": "^4.4.4"
