--- a/package.json
+++ b/package.json
@@ -75,9 +75,10 @@
     "email-templates": "^8.0.8",
     "express-rate-limit": "^5.5.1",
     "express-session": "^1.17.2",
+    "fix-esm": "^1.0.1",
     "fs-extra": "^10.0.0",
     "geoip-lite": "^1.4.2",
-    "graphql": "^16.0.1",
+    "graphql": "^15.7.2",
     "graphql-scalars": "^1.13.6",
     "graphql-tools": "^8.2.0",
     "graphql-type-json": "^0.3.2",
@@ -89,13 +90,13 @@
     "lodash": "^4.17.21",
     "lru_map": "^0.4.1",
     "luxon": "^2.1.1",
-    "minio": "^7.0.21",
+    "minio": "^7.0.22",
     "mongoose": "^6.0.13",
     "mongoose-autopopulate": "^0.16.0",
     "morgan": "^1.10.0",
     "node-buffs": "^0.8.17",
     "node-fetch": "^3.1.0",
-    "nodemailer": "^6.7.1",
+    "nodemailer": "^6.7.2",
     "opentracing": "^0.14.5",
     "otplib": "^12.0.1",
     "ow": "^0.28.1",
@@ -172,8 +173,9 @@
     "husky": "^7.0.4",
     "jest": "^27.3.1",
     "minimatch": "^3.0.4",
+    "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
-    "prettier": "^2.4.1",
+    "prettier": "^2.5.0",
     "pretty-quick": "^3.1.2",
     "prisma": "3.5.0",
     "sqlite3": "^5.0.2",
