--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "qiniu": "^7.4.0",
     "ramda": "^0.27.1",
     "raw-body": "^2.4.2",
+    "redis": "^4.0.1",
     "redis-dataloader": "^1.0.2",
     "regenerator-runtime": "^0.13.9",
     "response-time": "^2.3.2",
