--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "dev": "node --preserve-symlinks -r ts-node/register src/dev.ts",
-    "dev:watch": "nodemon --exec node --preserve-symlinks -r ts-node/register src/dev.ts",
+    "dev": "node --preserve-symlinks -r ts-node/register src/main.ts",
+    "dev:watch": "nodemon --exec node --preserve-symlinks -r ts-node/register src/main.ts",
     "test": "ENV=test jest",
     "test:cov": "ENV=test jest --coverage --no-cache",
     "check:circular": "npx madge --circular --extensions ts ./",
@@ -77,7 +77,7 @@
     "dayjs": "^1.10.7",
     "elastic-apm-node": "^3.29.0",
     "email-templates": "^8.0.8",
-    "express-rate-limit": "^6.2.1",
+    "express-rate-limit": "^6.3.0",
     "express-session": "^1.17.2",
     "fix-esm": "^1.0.1",
     "fs-extra": "^10.0.0",
@@ -176,6 +176,7 @@
     "minimatch": "^5.0.0",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
+    "pg": "^8.7.3",
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.3",
     "prisma": "3.9.2",
