--- a/package.json
+++ b/package.json
@@ -35,23 +35,23 @@
   "dependencies": {
     "@alicloud/pop-core": "^1.7.10",
     "@danielwii/asuna-helper": "^0.0.22",
-    "@danielwii/asuna-shared": "^0.0.7",
-    "@nestjs/apollo": "^10.0.6",
-    "@nestjs/common": "^8.4.0",
-    "@nestjs/core": "^8.4.0",
+    "@danielwii/asuna-shared": "^0.0.8",
+    "@nestjs/apollo": "^10.0.7",
+    "@nestjs/common": "^8.4.1",
+    "@nestjs/core": "^8.4.1",
     "@nestjs/cqrs": "^8.0.3",
-    "@nestjs/graphql": "^10.0.6",
-    "@nestjs/mongoose": "^9.0.2",
+    "@nestjs/graphql": "^10.0.7",
+    "@nestjs/mongoose": "^9.0.3",
     "@nestjs/passport": "^8.2.1",
-    "@nestjs/platform-express": "^8.4.0",
-    "@nestjs/platform-socket.io": "^8.4.0",
-    "@nestjs/platform-ws": "^8.4.0",
+    "@nestjs/platform-express": "^8.4.1",
+    "@nestjs/platform-socket.io": "^8.4.1",
+    "@nestjs/platform-ws": "^8.4.1",
     "@nestjs/schedule": "^1.0.2",
     "@nestjs/swagger": "^5.2.0",
     "@nestjs/terminus": "^8.0.4",
     "@nestjs/typeorm": "^8.0.3",
-    "@nestjs/websockets": "^8.4.0",
-    "@prisma/client": "3.10.0",
+    "@nestjs/websockets": "^8.4.1",
+    "@prisma/client": "3.11.0",
     "@sentry/node": "^6.18.2",
     "@sentry/tracing": "^6.18.2",
     "accesscontrol": "^2.2.1",
@@ -60,7 +60,7 @@
     "amqplib": "^0.8.0",
     "apollo-opentracing": "^2.1.72",
     "apollo-server-cache-redis": "^3.3.1",
-    "apollo-server-express": "^3.6.3",
+    "apollo-server-express": "^3.6.4",
     "apollo-server-plugin-response-cache": "^3.5.1",
     "bluebird": "^3.7.2",
     "blurhash": "^1.1.5",
@@ -72,12 +72,12 @@
     "class-validator": "^0.13.2",
     "common-tags": "^1.8.2",
     "compression": "^1.7.4",
-    "connect-redis": "^6.1.1",
+    "connect-redis": "^6.1.2",
     "cookie-parser": "^1.4.6",
     "cron-parser": "^4.2.1",
     "date-fns": "^2.28.0",
-    "dayjs": "^1.10.8",
-    "elastic-apm-node": "^3.29.0",
+    "dayjs": "^1.11.0",
+    "elastic-apm-node": "^3.30.0",
     "email-templates": "^8.0.10",
     "express-rate-limit": "^6.3.0",
     "express-session": "^1.17.2",
@@ -97,7 +97,7 @@
     "lru_map": "^0.4.1",
     "luxon": "^2.3.1",
     "minio": "^7.0.26",
-    "mongoose": "^6.2.4",
+    "mongoose": "^6.2.6",
     "mongoose-autopopulate": "^0.16.0",
     "morgan": "^1.10.0",
     "node-buffs": "^0.8.18",
@@ -117,15 +117,15 @@
     "regenerator-runtime": "^0.13.9",
     "response-time": "^2.3.2",
     "rxjs": "^7.5.5",
-    "sharp": "^0.30.2",
+    "sharp": "^0.30.3",
     "socket.io-redis": "^6.1.1",
     "typeorm": "^0.2.45",
-    "xlsx": "^0.18.3",
+    "xlsx": "^0.18.4",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.2.2",
-    "@nestjs/testing": "^8.4.0",
+    "@nestjs/cli": "^8.2.3",
+    "@nestjs/testing": "^8.4.1",
     "@trivago/prettier-plugin-sort-imports": "git+https://github.com/danielwii/prettier-plugin-sort-imports.git#main",
     "@tsconfig/node14": "^1.0.1",
     "@types/ali-oss": "^6",
@@ -162,12 +162,13 @@
     "@types/ramda": "^0",
     "@types/response-time": "^2",
     "@types/sharp": "^0",
+    "@types/supertest": "^2.0.11",
     "@types/ua-parser-js": "^0",
     "@types/uuid": "^8",
     "@types/xml2js": "^0",
-    "@typescript-eslint/eslint-plugin": "^5.14.0",
-    "@typescript-eslint/parser": "^5.14.0",
-    "eslint": "^8.10.0",
+    "@typescript-eslint/eslint-plugin": "^5.15.0",
+    "@typescript-eslint/parser": "^5.15.0",
+    "eslint": "^8.11.0",
     "eslint-config-alloy": "^4.5.1",
     "eslint-import-resolver-node": "^0.3.6",
     "eslint-plugin-import": "^2.25.4",
@@ -177,9 +178,9 @@
     "minimatch": "^5.0.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
-    "prettier": "^2.5.1",
+    "prettier": "^2.6.0",
     "pretty-quick": "^3.1.3",
-    "prisma": "3.10.0",
+    "prisma": "3.11.0",
     "sqlite3": "^5.0.2",
     "supertest": "^6.2.2",
     "ts-jest": "^27.1.3",
