--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "@nestjs/platform-ws": "^8.4.1",
     "@nestjs/schedule": "^1.0.2",
     "@nestjs/swagger": "^5.2.0",
-    "@nestjs/terminus": "^8.0.4",
+    "@nestjs/terminus": "^8.0.6",
     "@nestjs/typeorm": "^8.0.3",
     "@nestjs/websockets": "^8.4.1",
     "@prisma/client": "3.11.0",
@@ -86,7 +86,7 @@
     "geoip-lite": "^1.4.4",
     "graphql": "^16.3.0",
     "graphql-scalars": "^1.15.0",
-    "graphql-tools": "^8.2.0",
+    "graphql-tools": "^8.2.1",
     "graphql-type-json": "^0.3.2",
     "handlebars": "^4.7.7",
     "helmet": "^5.0.2",
@@ -94,13 +94,14 @@
     "jaeger-client": "^3.19.0",
     "jsondiffpatch": "^0.4.1",
     "lodash": "^4.17.21",
+    "lru-cache": "^7.7.1",
     "lru_map": "^0.4.1",
     "luxon": "^2.3.1",
     "minio": "^7.0.26",
-    "mongoose": "^6.2.6",
+    "mongoose": "^6.2.7",
     "mongoose-autopopulate": "^0.16.0",
     "morgan": "^1.10.0",
-    "node-buffs": "^0.8.18",
+    "node-buffs": "^0.8.20",
     "node-fetch": "^2.6.7",
     "nodemailer": "^6.7.2",
     "opentracing": "^0.14.7",
@@ -148,6 +149,7 @@
     "@types/jaeger-client": "^3",
     "@types/jest": "^27",
     "@types/lodash": "^4",
+    "@types/lru-cache": "^7",
     "@types/luxon": "^2",
     "@types/mime-types": "^2",
     "@types/minio": "^7",
@@ -162,7 +164,7 @@
     "@types/ramda": "^0",
     "@types/response-time": "^2",
     "@types/sharp": "^0",
-    "@types/supertest": "^2.0.11",
+    "@types/supertest": "^2",
     "@types/ua-parser-js": "^0",
     "@types/uuid": "^8",
     "@types/xml2js": "^0",
