--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "dev": "node --preserve-symlinks -r ts-node/register src/dev.ts",
-    "dev:watch": "nodemon --exec node --preserve-symlinks -r ts-node/register src/dev.ts",
+    "dev": "node --preserve-symlinks -r ts-node/register src/main.ts",
+    "dev:watch": "nodemon --exec node --preserve-symlinks -r ts-node/register src/main.ts",
     "test": "ENV=test jest",
     "test:cov": "ENV=test jest --coverage --no-cache",
     "check:circular": "npx madge --circular --extensions ts ./",
@@ -36,32 +36,32 @@
     "@alicloud/pop-core": "^1.7.10",
     "@danielwii/asuna-helper": "^0.0.24",
     "@danielwii/asuna-shared": "^0.0.8",
-    "@nestjs/apollo": "^10.0.7",
-    "@nestjs/common": "^8.4.2",
-    "@nestjs/core": "^8.4.2",
+    "@nestjs/apollo": "^10.0.8",
+    "@nestjs/common": "^8.4.3",
+    "@nestjs/core": "^8.4.3",
     "@nestjs/cqrs": "^8.0.3",
-    "@nestjs/graphql": "^10.0.7",
+    "@nestjs/graphql": "^10.0.8",
     "@nestjs/mongoose": "^9.0.3",
     "@nestjs/passport": "^8.2.1",
-    "@nestjs/platform-express": "^8.4.2",
-    "@nestjs/platform-socket.io": "^8.4.2",
-    "@nestjs/platform-ws": "^8.4.2",
-    "@nestjs/schedule": "^1.0.2",
-    "@nestjs/swagger": "^5.2.0",
+    "@nestjs/platform-express": "^8.4.3",
+    "@nestjs/platform-socket.io": "^8.4.3",
+    "@nestjs/platform-ws": "^8.4.3",
+    "@nestjs/schedule": "^1.1.0",
+    "@nestjs/swagger": "^5.2.1",
     "@nestjs/terminus": "^8.0.6",
     "@nestjs/typeorm": "^8.0.3",
-    "@nestjs/websockets": "^8.4.2",
-    "@prisma/client": "3.11.0",
-    "@sentry/node": "^6.19.1",
-    "@sentry/tracing": "^6.19.1",
+    "@nestjs/websockets": "^8.4.3",
+    "@prisma/client": "3.11.1",
+    "@sentry/node": "^6.19.3",
+    "@sentry/tracing": "^6.19.3",
     "accesscontrol": "^2.2.1",
     "ali-oss": "^6.17.1",
     "alipay-sdk": "^3.2.0",
     "amqplib": "^0.8.0",
     "apollo-opentracing": "^2.1.72",
     "apollo-server-cache-redis": "^3.3.1",
-    "apollo-server-express": "^3.6.4",
-    "apollo-server-plugin-response-cache": "^3.5.1",
+    "apollo-server-express": "^3.6.7",
+    "apollo-server-plugin-response-cache": "^3.5.2",
     "bluebird": "^3.7.2",
     "blurhash": "^1.1.5",
     "builder-pattern": "^1.3.0",
@@ -72,21 +72,21 @@
     "class-validator": "^0.13.2",
     "common-tags": "^1.8.2",
     "compression": "^1.7.4",
-    "connect-redis": "^6.1.2",
+    "connect-redis": "^6.1.3",
     "cookie-parser": "^1.4.6",
-    "cron-parser": "^4.2.1",
+    "cron-parser": "^4.3.0",
     "date-fns": "^2.28.0",
     "dayjs": "^1.11.0",
-    "elastic-apm-node": "^3.30.0",
-    "email-templates": "^8.0.10",
+    "elastic-apm-node": "^3.31.0",
+    "email-templates": "^9.0.0",
     "express-rate-limit": "^6.3.0",
     "express-session": "^1.17.2",
     "fix-esm": "^1.0.1",
     "fs-extra": "^10.0.1",
     "geoip-lite": "^1.4.4",
     "graphql": "^16.3.0",
-    "graphql-scalars": "^1.15.0",
-    "graphql-tools": "^8.2.1",
+    "graphql-scalars": "^1.17.0",
+    "graphql-tools": "^8.2.4",
     "graphql-type-json": "^0.3.2",
     "handlebars": "^4.7.7",
     "helmet": "^5.0.2",
@@ -94,16 +94,16 @@
     "jaeger-client": "^3.19.0",
     "jsondiffpatch": "^0.4.1",
     "lodash": "^4.17.21",
-    "lru-cache": "^7.7.1",
+    "lru-cache": "^7.7.3",
     "lru_map": "^0.4.1",
     "luxon": "^2.3.1",
     "minio": "^7.0.26",
-    "mongoose": "^6.2.7",
-    "mongoose-autopopulate": "^0.16.0",
+    "mongoose": "^6.2.10",
+    "mongoose-autopopulate": "^0.16.1",
     "morgan": "^1.10.0",
     "node-buffs": "^0.8.20",
     "node-fetch": "^2.6.7",
-    "nodemailer": "^6.7.2",
+    "nodemailer": "^6.7.3",
     "opentracing": "^0.14.7",
     "otplib": "^12.0.1",
     "ow": "^0.28.1",
@@ -113,20 +113,20 @@
     "qiniu": "^7.4.0",
     "ramda": "^0.28.0",
     "raw-body": "^2.5.1",
-    "redis": "^4.0.4",
+    "redis": "^4.0.6",
     "redis-dataloader": "^1.0.2",
     "regenerator-runtime": "^0.13.9",
     "response-time": "^2.3.2",
     "rxjs": "^7.5.5",
     "sharp": "^0.30.3",
     "socket.io-redis": "^6.1.1",
-    "typeorm": "^0.2.45",
-    "xlsx": "^0.18.4",
+    "typeorm": "^0.3.4",
+    "xlsx": "^0.18.5",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.2.3",
-    "@nestjs/testing": "^8.4.1",
+    "@nestjs/cli": "^8.2.4",
+    "@nestjs/testing": "^8.4.3",
     "@trivago/prettier-plugin-sort-imports": "git+https://github.com/danielwii/prettier-plugin-sort-imports.git#main",
     "@tsconfig/node14": "^1.0.1",
     "@types/ali-oss": "^6",
@@ -167,9 +167,9 @@
     "@types/ua-parser-js": "^0",
     "@types/uuid": "^8",
     "@types/xml2js": "^0",
-    "@typescript-eslint/eslint-plugin": "^5.15.0",
-    "@typescript-eslint/parser": "^5.15.0",
-    "eslint": "^8.11.0",
+    "@typescript-eslint/eslint-plugin": "^5.18.0",
+    "@typescript-eslint/parser": "^5.18.0",
+    "eslint": "^8.12.0",
     "eslint-config-alloy": "^4.5.1",
     "eslint-import-resolver-node": "^0.3.6",
     "eslint-plugin-import": "^2.25.4",
@@ -179,15 +179,15 @@
     "minimatch": "^5.0.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
-    "prettier": "^2.6.0",
+    "prettier": "^2.6.2",
     "pretty-quick": "^3.1.3",
-    "prisma": "3.11.0",
+    "prisma": "3.11.1",
     "sqlite3": "^5.0.2",
     "supertest": "^6.2.2",
-    "ts-jest": "^27.1.3",
+    "ts-jest": "^27.1.4",
     "ts-node": "^10.7.0",
     "tslib": "^2.3.1",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.3"
   },
   "nodemonConfig": {
     "verbose": true,
