--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@alicloud/pop-core": "^1.7.10",
+    "@babel/parser": "^7.17.9",
     "@danielwii/asuna-helper": "^0.0.26",
     "@danielwii/asuna-shared": "^0.0.8",
     "@nestjs/apollo": "^10.0.9",
@@ -51,9 +52,9 @@
     "@nestjs/terminus": "^8.0.6",
     "@nestjs/typeorm": "^8.0.3",
     "@nestjs/websockets": "^8.4.4",
-    "@prisma/client": "3.12.0",
-    "@sentry/node": "^6.19.6",
-    "@sentry/tracing": "^6.19.6",
+    "@prisma/client": "3.13.0",
+    "@sentry/node": "^6.19.7",
+    "@sentry/tracing": "^6.19.7",
     "accesscontrol": "^2.2.1",
     "ali-oss": "^6.17.1",
     "alipay-sdk": "^3.2.0",
@@ -79,12 +80,12 @@
     "dayjs": "^1.11.1",
     "elastic-apm-node": "^3.31.0",
     "email-templates": "^9.0.0",
-    "express-rate-limit": "^6.3.0",
+    "express-rate-limit": "^6.4.0",
     "express-session": "^1.17.2",
     "fix-esm": "^1.0.1",
     "fs-extra": "^10.1.0",
-    "geoip-lite": "^1.4.4",
-    "graphql": "^16.3.0",
+    "geoip-lite": "^1.4.5",
+    "graphql": "^16.4.0",
     "graphql-scalars": "^1.17.0",
     "graphql-tools": "^8.2.8",
     "graphql-type-json": "^0.3.2",
@@ -97,8 +98,8 @@
     "lru-cache": "^7.8.1",
     "lru_map": "^0.4.1",
     "luxon": "^2.3.2",
-    "minio": "^7.0.27",
-    "mongoose": "^6.3.0",
+    "minio": "^7.0.28",
+    "mongoose": "^6.3.1",
     "mongoose-autopopulate": "^0.16.1",
     "morgan": "^1.10.0",
     "node-buffs": "^0.8.20",
@@ -167,26 +168,26 @@
     "@types/ua-parser-js": "^0",
     "@types/uuid": "^8",
     "@types/xml2js": "^0",
-    "@typescript-eslint/eslint-plugin": "^5.20.0",
-    "@typescript-eslint/parser": "^5.20.0",
-    "eslint": "^8.13.0",
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
+    "@typescript-eslint/parser": "^5.21.0",
+    "eslint": "^8.14.0",
     "eslint-config-alloy": "^4.5.1",
     "eslint-import-resolver-node": "^0.3.6",
     "eslint-plugin-import": "^2.26.0",
     "glob": "^8.0.1",
     "husky": "^7.0.4",
-    "jest": "^27.5.1",
+    "jest": "^28.0.2",
     "minimatch": "^5.0.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
     "prettier": "^2.6.2",
     "pretty-quick": "^3.1.3",
-    "prisma": "3.12.0",
-    "sqlite3": "^5.0.4",
-    "supertest": "^6.2.2",
+    "prisma": "3.13.0",
+    "sqlite3": "^5.0.5",
+    "supertest": "^6.2.3",
     "ts-jest": "^27.1.4",
     "ts-node": "^10.7.0",
-    "tslib": "^2.3.1",
+    "tslib": "^2.4.0",
     "typescript": "^4.6.3"
   },
   "nodemonConfig": {
