--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "dependencies": {
     "@alicloud/pop-core": "^1.7.10",
-    "@babel/parser": "^7.17.9",
+    "@babel/parser": "^7.17.10",
     "@danielwii/asuna-helper": "^0.0.27",
     "@danielwii/asuna-shared": "^0.0.8",
     "@nestjs/apollo": "^10.0.9",
@@ -75,10 +75,10 @@
     "compression": "^1.7.4",
     "connect-redis": "^6.1.3",
     "cookie-parser": "^1.4.6",
-    "cron-parser": "^4.3.0",
+    "cron-parser": "^4.4.0",
     "date-fns": "^2.28.0",
     "dayjs": "^1.11.1",
-    "elastic-apm-node": "^3.31.0",
+    "elastic-apm-node": "^3.32.0",
     "email-templates": "^9.0.0",
     "express-rate-limit": "^6.4.0",
     "express-session": "^1.17.2",
@@ -94,8 +94,9 @@
     "highland": "^2.13.5",
     "jaeger-client": "^3.19.0",
     "jsondiffpatch": "^0.4.1",
+    "libphonenumber-js": "^1.9.52",
     "lodash": "^4.17.21",
-    "lru-cache": "^7.8.1",
+    "lru-cache": "^7.9.0",
     "lru_map": "^0.4.1",
     "luxon": "^2.3.2",
     "minio": "^7.0.28",
@@ -104,14 +105,14 @@
     "morgan": "^1.10.0",
     "node-buffs": "^0.8.20",
     "node-fetch": "^2.6.7",
-    "nodemailer": "^6.7.3",
+    "nodemailer": "^6.7.4",
     "opentracing": "^0.14.7",
     "otplib": "^12.0.1",
     "ow": "^0.28.1",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "pump": "^3.0.0",
-    "qiniu": "^7.5.0",
+    "qiniu": "^7.6.0",
     "ramda": "^0.28.0",
     "raw-body": "^2.5.1",
     "redis": "^4.0.6",
@@ -176,19 +177,19 @@
     "eslint-plugin-import": "^2.26.0",
     "glob": "^8.0.1",
     "husky": "^7.0.4",
-    "jest": "^28.0.2",
+    "jest": "^28.0.3",
     "minimatch": "^5.0.1",
     "mysql2": "^2.3.3",
-    "nodemon": "^2.0.15",
+    "nodemon": "^2.0.16",
     "prettier": "^2.6.2",
     "pretty-quick": "^3.1.3",
     "prisma": "3.13.0",
-    "sqlite3": "^5.0.5",
+    "sqlite3": "^5.0.6",
     "supertest": "^6.2.3",
     "ts-jest": "^27.1.4",
     "ts-node": "^10.7.0",
     "tslib": "^2.4.0",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.4"
   },
   "nodemonConfig": {
     "verbose": true,
