--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@danielwii/asuna-node-server",
-  "version": "0.9.2",
+  "version": "0.9.3",
   "author": "Daniel Wei <danielwii0326@gmail.com>",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -35,13 +35,13 @@
   "dependencies": {
     "@alicloud/pop-core": "^1.7.10",
     "@babel/parser": "^7.17.10",
-    "@danielwii/asuna-helper": "^0.0.29",
+    "@danielwii/asuna-helper": "^0.0.30",
     "@danielwii/asuna-shared": "^0.0.8",
-    "@nestjs/apollo": "^10.0.9",
+    "@nestjs/apollo": "^10.0.11",
     "@nestjs/common": "^8.4.4",
     "@nestjs/core": "^8.4.4",
-    "@nestjs/cqrs": "^8.0.3",
-    "@nestjs/graphql": "^10.0.10",
+    "@nestjs/cqrs": "^8.0.4",
+    "@nestjs/graphql": "^10.0.11",
     "@nestjs/mongoose": "^9.0.3",
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.4.4",
@@ -61,8 +61,8 @@
     "amqplib": "^0.8.0",
     "apollo-opentracing": "^2.1.75",
     "apollo-server-cache-redis": "^3.3.1",
-    "apollo-server-express": "^3.6.7",
-    "apollo-server-plugin-response-cache": "^3.5.2",
+    "apollo-server-express": "^3.7.0",
+    "apollo-server-plugin-response-cache": "^3.5.3",
     "bluebird": "^3.7.2",
     "blurhash": "^1.1.5",
     "builder-pattern": "^1.3.0",
@@ -78,7 +78,7 @@
     "cron-parser": "^4.4.0",
     "date-fns": "^2.28.0",
     "dayjs": "^1.11.1",
-    "elastic-apm-node": "^3.32.0",
+    "elastic-apm-node": "^3.33.0",
     "email-templates": "^9.0.0",
     "express-rate-limit": "^6.4.0",
     "express-session": "^1.17.2",
@@ -92,9 +92,10 @@
     "handlebars": "^4.7.7",
     "helmet": "^5.0.2",
     "highland": "^2.13.5",
+    "ioredis": "^5.0.4",
     "jaeger-client": "^3.19.0",
     "jsondiffpatch": "^0.4.1",
-    "libphonenumber-js": "^1.9.52",
+    "libphonenumber-js": "^1.9.53",
     "lodash": "^4.17.21",
     "lru-cache": "^7.9.0",
     "lru_map": "^0.4.1",
@@ -184,7 +185,7 @@
     "prettier": "^2.6.2",
     "pretty-quick": "^3.1.3",
     "prisma": "3.13.0",
-    "sqlite3": "^5.0.6",
+    "sqlite3": "^5.0.7",
     "supertest": "^6.2.3",
     "ts-jest": "^28.0.1",
     "ts-node": "^10.7.0",
