--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "apollo-server-cache-redis": "^3.3.1",
     "apollo-server-express": "^3.9.0",
     "apollo-server-plugin-response-cache": "^3.6.1",
+    "apple-signin-auth": "^1.7.0",
     "bluebird": "^3.7.2",
     "blurhash": "^1.1.5",
     "builder-pattern": "^1.3.0",
