--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
   },
   "dependencies": {
     "@alicloud/pop-core": "^1.7.12",
+    "@aws-sdk/client-s3": "^3.118.1",
+    "@aws-sdk/s3-request-presigner": "^3.118.1",
     "@babel/parser": "^7.18.6",
     "@danielwii/asuna-helper": "^0.0.36",
     "@danielwii/asuna-shared": "^0.0.8",
