--- a/package.json
+++ b/package.json
@@ -54,6 +54,11 @@
     "@nestjs/terminus": "^8.1.0",
     "@nestjs/typeorm": "^8.1.4",
     "@nestjs/websockets": "^8.4.7",
+    "@opentelemetry/instrumentation": "^0.29.2",
+    "@opentelemetry/instrumentation-express": "^0.30.0",
+    "@opentelemetry/instrumentation-graphql": "^0.29.0",
+    "@opentelemetry/instrumentation-http": "^0.29.2",
+    "@opentelemetry/sdk-trace-node": "^1.3.1",
     "@prisma/client": "4.0.0",
     "@sentry/node": "^7.3.1",
     "@sentry/tracing": "^7.3.1",
